FIX align-property not working for Image widget

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -1,6 +1,7 @@
 /* Alignment classes */
 .pull-right {float: right;}
 .pull-left {float: left;}
+.pull-center {margin-left: auto; margin-right: auto; display: block;}
 
 /* Visibility classes */
 .exf-promoted {font-weight: bold;}
@@ -59,6 +60,9 @@ body:not(.sapUiSizeCompact) .sapFDynamicPageTitleMainHeadingInner .sapMTitle > s
 
 /* QRCode */
 .qrcode > img {margin: 0 auto 10px auto;}
+
+/* Image */
+img.sapMImg {display: block}
 
 /* Temp. fixes for UI5 issues */
 .sapMImageContentImageIcon.sapUiIcon {position: absolute; display: block;}
